--- a/products.html
+++ b/products.html
@@ -12,13 +12,30 @@
     <header>
         <table>
             <tr>
-                <td><a href="index.html"><img src="src/img/hersheyland_logo-holiday.webp" alt=""></a></td>
-                <td><a href="resipes.html">Recipes</a></td>
-                <td><a href="inspiration.html">Inspiration</a></td>
-                <td><a href="our_brands.html">Our Brands</a></td>
-                <td><a href="products.html">Products</a></td>
-                <td><a href="about.html">About</a></td>
-                <td><input type="text" placeholder="Search tons of products , resipes and activities ideas"></td>
+
+                <td>
+                    <a href="index.html"><img src="src/img/hersheyland_logo-holiday.webp" alt="Logo Hersheyland" width="150px"></a>
+                </td>
+
+                <td width="10"></td>
+
+                <td>
+                    <table>
+                        <tr>
+                            <td><a href="resipes.html">Resipes</a></td>
+                            <td width="10"></td> 
+                            <td><a href="inspiration.html">Inspiracion</a></td>
+                            <td width="10"></td>
+                            <td><a href="our_brands.html">Our brands</a></td>
+                            <td width="10"></td> 
+                            <td><a href="products.html">Products</a></td>
+                            <td width="10"></td> 
+                            <td><a href="about.html">About</a></td>
+                            <td width="1150"></td> 
+                            <td><input type="text" placeholder="Search tons of products, Resipes and activity ideas"></td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
         </table>
     </header>
@@ -39,42 +56,93 @@
 
     </main>
     <footer>
-        <table>
-            <tr>
-                <td>
-                    <nav>
-                        <ul>
-                            <li><a href="">Contact Customer Service</a></li>
-                            <li><a href="">The Hershey Company</a></li>
-                            <li><a href="">Shop Hershey Store</a></li>
-                        </ul>
-                    </nav>
-                </td>
-                <td>
-                    <nav>
-                        <ul>
-                            <li><a href="">Visit Hershey</a></li>
-                            <li><a href="">Hershey Careers</a></li>
-                            <li><a href="">Hershey Foodservice</a></li>
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <td colspan="3">
-                    <p>©2024 The Hershey Company. All Rights Reserved.</p>
-                </td>
-                <td><a href="">DO NOT SELL MY INFO</a></td>
-                <td><a href="">Privacy Choices</a></td>
-                <td><a href="">Notice to Parents</a></td>
-                <td><a href="">Privacy Policy</a></td>
-                <td><a href="">Terms & Conditions</a></td>
-                <td><a href="">Web Accessibility</a></td>
-            </tr>
-        </table>
+        <center>
+            <table>
+                <tr>
+                    <td>
+                        <h2>Let's Keep in Touch</h2>
+                    </td>
+                    <td>
+                        <h4> Sign Up for Our Newsletter</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unwrap recipe ideas, celebration inspiration and product news in your inbox!</p>
+                    </td>
+                    <td>
+                        <input type="text" placeholder="Enter your email address">
+                    </td>
+                </tr>
+            </table>
 
+            <table>
+                <tr>
+                    <td>
+                        <a href="#"><img src="src/img/instagram.jpg" alt="" width="30px"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="src/img/tiktok.png" alt="" width="30px"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="src/img/youtube.png" alt="" width="30px"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="src/img/facebook.jpg" alt="" width="30px"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="src/img/pinterest.jpg" alt="" width="30px"></a>
+                    </td>
+                    <td>
+                        <nav>
+                            <ul>
+                                <li><a href="">Contact Customer Service</a></li>
+                                <li><a href="">The Hershey Company</a></li>
+                                <li><a href="">Shop Hershey Store</a></li>
+                            </ul>
+                        </nav>
+                    </td>
+                    <td>
+                        <nav>
+                            <ul>
+                                <li><a href="">Visit Hershey</a></li>
+                                <li><a href="">Hershey Careers</a></li>
+                                <li><a href="">Hershey Foodservice</a></li>
+                            </ul>
+                        </nav>
+                    </td>
+                </tr>
+            </table>
+            <br><br><br><br><br>
+
+            <table>
+                <tr>
+                    <td>
+                        <h5>©2024 The Hershey Company. All Rights Reserved.</h5>
+                    </td>
+                    <td width="30"></td>
+                    <td>
+                        <a href="">DO NOT SELL MY INFO  |</a>
+                    </td>
+                    <td>
+                        <a href="">Privacy Choices  |</a>
+                    </td>
+                    <td>
+                        <a href="">Notice to Parents   |</a>
+                    </td>
+                    <td>
+                        <a href="">Privacy Policy  |</a>
+                    </td>
+                    <td>
+                        <a href="">Terms & Conditions  |</a>
+                    </td>
+                    <td>
+                        <a href="">Web Accessibility  |</a>
+                    </td>
+                </tr>
+            </table>
+        
+        </center>
     </footer>
 </body>
 
